fix: correct alignment to end message

--- a/apps/client/src/views/timer/Timer.scss
+++ b/apps/client/src/views/timer/Timer.scss
@@ -95,7 +95,7 @@
       font-weight: 600;
       color: var(--timer-overtime-color-override, $timer-finished-color);
       padding: 0;
-      height: 100%;
+      max-height: 100%;
     }
 
     .timer {
